Release 1.4

 #1 XML extractor support
#36 CSV extractors
#41 Automatic mapping of row attributes
#43 Deprecate/remove explicit relationship mapping from CreateOrUpdateBuilder
#44 Straighten mapping by ID
#46 Cayenne upgrade to 4.0.M3.debfa94

Release 1.3 2015-04-09

#23 Support for "delete" of targets missing in the source
#25 Parameterized queries for Extractors
#26 Refactoring ETL stack to expose processing chain in the object design
#27 Upgrade to official Cayenne 4.0.M2
#28 Refactor TaskBuilder to be able to split it into specialized builders 
#30 Execution refactoring: split stats in a separate class
#31 Execution: support for a map of arbitrary 'attributes'
#32 Task stage listeners
#33 SourceKeysTask: a task for extraction of source keys
#34 Stop supporting positional parameters in Extractor templates


Release 1.2 2014-12-08

#24 Upgrade Cayenne dependency to 4.0.M2.1ab1caa

Release 1.1 2014-10-23

#8 'MatchingTaskBuilder.matchBy' to take Property<?> instead of String
#9 Matcher refactoring
#10 KeyBuilder refactoring - renaming to KeyMapAdapter
#11 Rename MatchingTaskBuilder.matchByPrimaryKey to matchById
#13 EtlAdapter to package extensions to LinkETL
#14 Rename "transform" package to "load"
#15 Rename Matchers to Mappers
#16 ClasspathExtractorConfigLoader incorrectly resolves resource URLs
#17 Disallow ID updates for auto-generated IDs
#18 JdbcExtractorFactory - trim SQL and other properties comping from XML
#19 Task update count includes related objects
#20 ETL fails to reset non-null properties to NULL on update
#21 A default IConnectorFactory using target DataSource for source
#22 NPE on syncing nullable FK 

Release 1.0 2014-08-13

[open sourcing LinkETL]

