@@ -1,0 +1,94 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<schema xmlns="http://www.w3.org/2001/XMLSchema" targetNamespace="http://github.com/nhl/link-etl/extractor_config.xsd"
+	xmlns:tns="http://github.com/nhl/link-etl/extractor_config.xsd" elementFormDefault="qualified">
+
+	<annotation>
+		<documentation xml:lang="en">
+			LinkETL Extractor config schema. Provides a structured way to configure an
+			arbitrary ETL extractor.
+		</documentation>
+	</annotation>
+
+	<element name="config" type="tns:ConfigType" />
+
+
+	<complexType name="ConfigType">
+		<annotation>
+			<documentation source="description">
+				Top level element
+			</documentation>
+		</annotation>
+		<sequence>
+
+			<element name="type" type="string" minOccurs="1" maxOccurs="1">
+				<annotation>
+					<documentation source="description">
+						Defines "type" of the Extractor, such as "jdbc", "csv", "xml", etc.
+					</documentation>
+				</annotation>
+			</element>
+
+			<element name="connectorId" type="string" minOccurs="1" maxOccurs="1">
+				<annotation>
+					<documentation source="description">
+						Defines a symbolic ID of the connector used by the extractor. Connector must
+						be
+						compatible with Extrator type specified above.
+					</documentation>
+				</annotation>
+			</element>
+
+			<element name="attributes" minOccurs="0" maxOccurs="1">
+				<annotation>
+					<documentation source="description">
+						An optional list of attributes that maps source row keys to the target names.
+					</documentation>
+				</annotation>
+				<complexType>
+					<sequence>
+						<element name="attribute" type="tns:AttributeType" minOccurs="0" maxOccurs="unbounded" />
+					</sequence>
+				</complexType>
+			</element>
+
+
+			<element name="properties" minOccurs="0" maxOccurs="1">
+				<annotation>
+					<documentation source="description">
+						An list of Extractor-specific properties used to configure an arbitrary
+						extractor.
+					</documentation>
+				</annotation>
+
+				<complexType>
+					<sequence>
+						<any processContents="skip" minOccurs="0" maxOccurs="unbounded">
+							<annotation>
+								<documentation source="description">
+									Each property tag name becomes a property name. Often Extractors are using
+									naming conventions, structuring property names like this: "extractor.jdbc.sqltemplate".
+									Here the first part is a
+									fixed prefix ("extractor"), second is Extractor type ("jdbc"),
+									third - property name understood by the given
+									Extractor.
+								</documentation>
+							</annotation>
+						</any>
+					</sequence>
+				</complexType>
+			</element>
+		</sequence>
+	</complexType>
+
+
+
+	<complexType name="AttributeType">
+		<sequence>
+			<element name="type" type="string" minOccurs="1" maxOccurs="1" />
+			<element name="source" type="string" minOccurs="0" maxOccurs="1" />
+			<element name="target" type="string" minOccurs="0" maxOccurs="1" />
+		</sequence>
+	</complexType>
+
+
+</schema>
