@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <config xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://github.com/nhl/link-etl/extractor_config.xsd"
 	xmlns="http://github.com/nhl/link-etl/extractor_config.xsd">
+
 	<type>jdbc</type>
-	<connectorId>derbysrc</connectorId>
+	<connectorId>dummyconnector</connectorId>
+
 	<attributes>
 		<attribute>
 			<type>java.lang.Integer</type>
@@ -14,21 +16,11 @@
 			<source>AGE</source>
 			<target>age</target>
 		</attribute>
-		<attribute>
-			<type>java.lang.String</type>
-			<source>DESCRIPTION</source>
-			<target>description</target>
-		</attribute>
-		<attribute>
-			<type>java.lang.String</type>
-			<source>NAME</source>
-			<target>name</target>
-		</attribute>
 	</attributes>
+
 	<properties>
 		<extractor.jdbc.sqltemplate>
-			<![CDATA[SELECT id, age, description, name FROM utest.etl1
-			]]>
+			<![CDATA[SELECT * FROM utest.etl1]]>
 		</extractor.jdbc.sqltemplate>
 	</properties>
 </config>
