@@ -6,6 +6,7 @@ Release 1.4
 #43 Deprecate/remove explicit relationship mapping from CreateOrUpdateBuilder
 #44 Straighten mapping by ID
 #46 Cayenne upgrade to 4.0.M3.debfa94
+#50 XML Schema for extractor configs
 
 Release 1.3 2015-04-09
 
